--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-navigation/devtools": "^6.0.20",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "global": "^4.4.0",
     "i18next": "^23.7.16",
     "prop-types": "^15.8.1",
@@ -18,10 +22,17 @@
     "react-hook-form": "^7.49.3",
     "react-i18next": "^14.0.0",
     "react-native": "0.73.2",
+    "react-native-config": "^1.5.1",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "^2.14.1",
     "react-native-paper": "^5.12.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.3.0",
     "rn-secure-storage": "^3.0.0",
     "styled-components": "^6.1.8",
     "watchman": "^1.0.0",
@@ -44,6 +55,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-flipper": "^0.212.0",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
