--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,18 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "*": ["src/*"],
+      "@features": ["src/features/index"],
+      "@components": ["src/components/index"],
+      "@theme": ["src/theme/index"],
+      "@i18n/*": ["src/@i18n/*"],
+      "@utils": ["src/utils/index"],
+      "@constants": ["src/constants/index"],
+      "@types": ["src/types/index"],
+      "@store": ["src/store/index"],
+      "@navigation": ["src/navigation/index"]
+    }
+  }
 }
